Fix Overflow-X

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -723,3 +723,7 @@ body {
 	-ms-overflow-style: none;
 }
 
+.overflow-fix {
+	display: flex;
+	flex-wrap: wrap;
+}
